--- a/Meleze.SBC.GUI/Meleze.SBC.GUI/UIComponents/StarMenu.razor.css
+++ b/Meleze.SBC.GUI/Meleze.SBC.GUI/UIComponents/StarMenu.razor.css
@@ -1,7 +1,7 @@
 .star-menu {
-    width:180px;
+    width: 180px;
     overflow: hidden;
-    /*background: blue;*/
+    background: blue;
 }
 
 .star-menu-fixed {
@@ -38,6 +38,6 @@
         transition: all 0.5s ease-in-out;
     }
 
-.menu-item.selected > .icon {
-    color: white;
-}
+    .menu-item.selected > .icon {
+        color: white;
+    }
