--- a/Meleze.SBC.GUI/Meleze.SBC.GUI/Pages/Home.razor
+++ b/Meleze.SBC.GUI/Meleze.SBC.GUI/Pages/Home.razor
@@ -25,7 +25,7 @@
 
     private void IndexChange()
     {
-        Console.WriteLine("Martina non vuole che scriva 'PORCODIO' allora metto 'ROSA'");
+        Console.WriteLine("Index Change");
     }
 
     [JSInvokable]
